add metadata/social media content to basic page template & editor

--- a/dfa_django_microsite/templates/base.html
+++ b/dfa_django_microsite/templates/base.html
@@ -7,6 +7,7 @@
     {% render_block "css" %}
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+    {% if not request.toolbar.edit_mode %}{% include "metadata.html" %}{% endif %}
   </head>
   <body style="padding-top:60px">
     {% cms_toolbar %}
@@ -30,9 +31,9 @@
         {% block content %}
         {% endblock content %}
         </div>
+    {% if request.toolbar.edit_mode %}{% include "metadata_editor.html" %}{% endif %}
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     {% render_block "js" %}
   </body>
 </html>
-
