--- a/dfa_django_microsite/static/dfa.css
+++ b/dfa_django_microsite/static/dfa.css
@@ -2,89 +2,90 @@ body {
   padding-top: 50px;
 }
 
-.navbar-default {
-  background-color: #1e3270;
-  border: none;
-  color: #fff;
-}
+/* NAVBAR */
+  .navbar-default {
+    background-color: #1e3270;
+    border: none;
+    color: #fff;
+  }
 
-.navbar-default a, .navbar-default .navbar-nav>li>a {
- color: #fff;
-}
+  .navbar-default a, .navbar-default .navbar-nav>li>a {
+   color: #fff;
+  }
 
-.navbar-toggle {
-  border: none;
-  color: #FFF;
-  margin-top: 5px;
-  margin-bottom: 0px;
-}
+  .navbar-toggle {
+    border: none;
+    color: #FFF;
+    margin-top: 5px;
+    margin-bottom: 0px;
+  }
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: inherit;
-}
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: inherit;
+  }
 
-.btn-social {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #1e3270;
-    border-radius: 100%;
+  .btn-social {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #1e3270;
+      border-radius: 100%;
+      text-align: center;
+      font-size: 20px;
+      line-height: 45px;
+  }
+
+  .btn-social:hover {
+    background-color: #3C64E0;
+  }
+
+  .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color: #FFF;
+    background-color: #3C64E0;
+  }
+/* END NAVBAR */
+
+/* FULL WIDTH IMAGES */
+  .full-width-image-1 {
+    background: url(http://lorempixel.com/g/1920/500/) no-repeat center center;
+    background-size: cover;
     text-align: center;
-    font-size: 20px;
-    line-height: 45px;
-}
+    padding: 100px 0;
+  }
 
-.btn-social:hover {
-  background-color: #3C64E0;
-}
+  .full-width-image-2 {
+    background: url(http://lorempixel.com/g/1920/450/) no-repeat center center;
+    background-size: cover;
+    text-align: center;
+    height: 450px;
+  }
 
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
-  color: #FFF;
-  background-color: #3C64E0;
-}
+  .full-width-image-3 {
+    background: url(http://lorempixel.com/g/1920/400/) no-repeat center center;
+    background-size: cover;
+    text-align: center;
+    height: 400px;
+  }
 
-.full-width-image-1 {
-  background: url(http://lorempixel.com/g/1920/500/) no-repeat center center;
-  background-size: cover;
-  text-align: center;
-  padding: 100px 0;
-}
+  .logo-wrapper {
+    display: inline-block;
+  }
+/* END FULL WIDTH IMAGES */
 
-.full-width-image-2 {
-  background: url(http://lorempixel.com/g/1920/450/) no-repeat center center;
-  background-size: cover;
-  text-align: center;
-  height: 450px;
-}
+/* FOOTER */
+  footer {
+    margin: 50px 0;
+  }
 
-.logo-wrapper {
-  display: inline-block;
-}
+  footer, footer a {
+    color: #FFF !important;
+  }
+/* END FOOTER */
 
+/* OTHER */
 .section {
   /*padding-top: 75px;*/
   padding-bottom: 75px;
-}
-
-h1 {
-  font-size: 3em;
-  margin: 30px 0;
-}
-
-.section-lead {
-  margin: 30px 0;
-}
-
-.section-paragraph {
-  margin: 30px 0;
-}
-
-footer {
-  margin: 50px 0;
-}
-
-footer, footer a {
-  color: #FFF !important;
 }
 
 .no-margin {
@@ -94,6 +95,12 @@ footer, footer a {
 .half-margin {
   padding-bottom: 1em !important;
 }
+
+h1 {
+  font-size: 3em;
+  margin: 30px 0;
+}
+/* END OTHER */
 
 @media (max-width: 768px) {
 
